# ego-planner

./: .gitignore  README.md  run.sh  run_docker.sh  run_ego.sh
docker/: Dockerfile  Dockerfile.aarch64
sim_ws/src/simulation_environment/: CMakeLists.txt  package.xml
sim_ws/src/simulation_environment/launch/: default.launch  depth_camera.launch  mavros_sitl.launch  px4_config.yaml  px4_pluginlists.yaml
sim_ws/src/simulation_environment/moving_target/src/: moving_target.cpp
sim_ws/src/simulation_environment/sim/map/: add_competition_map.world  baylands.world  empty.world
sim_ws/src/simulation_environment/sim/models/add_competition_building/: model.config  model.sdf
sim_ws/src/simulation_environment/sim/models/add_competition_building_with_stair/: model.config  model.sdf
sim_ws/src/simulation_environment/sim/models/iris_depth_camera_custom/: iris_depth_camera_custom.sdf  model.config
sim_ws/src/simulation_environment/sim/models/iris_downcam_custom/: iris_downcam_custom.sdf  model.config
sim_ws/src/simulation_environment/sim/models/px4vision_custom/: model.config  px4vision_custom.sdf
sim_ws/src/simulation_environment/sim/models/rotors_description.bck/: model.config
sim_ws/src/simulation_environment/sim/models/rotors_description.bck/urdf/: component_snippets.xacro  fixedwing_base.xacro  iris.xacro  iris_base.xacro  iris_rtps_base.xacro  multirotor_base.xacro  plane.xacro  plane_base.xacro  standard_vtol.xacro  standard_vtol_base.xacro  vtol_base.xacro
sim_ws/src/simulation_environment/sim/models/typhoon_h480_custom/: model.config  typhoon_h480.sdf.jinja  typhoon_h480.sdf.last_generated  typhoon_h480_custom.sdf
src/rc_demo/: CMakeLists.txt  package.xml  rc_demo.py  rc_flight.py  utils.py
src/rc_demo/launch/: rc_demo.launch
src/uav_simulator/: mockamap.zip2
tools/: start_ego_planner.sh
(+98 files in other folders)
