<?xml version="1.0"?>
<package format="2">
  <name>simulation_environment</name>
  <version>0.0.0</version>
  <description>The Obstacle Avoid Project</description>

  <maintainer email="sblee@jmarple.ai">Seungbin Lee</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
